Replace deprecated test container mount usage
TestContainers have deprecated `withFileSystemBind`. This change moves away from using binds and instead copies files into a container before it's started and out of the container after it's stopped, as needed.

This is a breaking change.